Design: color scheme, basic vertical spacing, nav, header fixes
- Fixed App=header from blowing out right side of mobile with simplified css
- Filled index.css with nav styling - spacing, hover/active states
- index.js: streamlined nav's Link tags to NavLink, to take advantage of react-router-dom's active states when on matching page;
    - also reduced down syntax on Routes in switch to single lined self-closing tags
- Bringing in Orbitron web font for nav
- No gutter on mobile, just DT
- curved corners and vertical spacing adjustments throughout.
- more media query details for DT, always at file bottom.

--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,12 @@
   /*background-color: #282c34;*/
   min-height: 10vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  /*flex-direction: column;
+  align-items: center;*/
   justify-content: center;
   font-size: calc(10px + 2vmin);
   /*color: white;*/
-  margin: 0 -1000px;
+  margin: 0 -20px;
 }
 
 
