--- a/src/customerinfo.css
+++ b/src/customerinfo.css
@@ -1,4 +1,3 @@
-/**/
 .opHeader > div  {
   padding: 10px 0;
   font-weight: bold;
@@ -9,10 +8,6 @@
   padding: 5px 0 20px 0;
 }
 
-
-.opGrid {
-  /*display: flex;*/
-}
 .opHeader, .customerData {
   border-bottom: 2px solid #000;
 }
