--- a/src/forms.css
+++ b/src/forms.css
@@ -19,6 +19,10 @@ button:hover, button:active  {
   opacity: 1;
 }
 
+form  {
+  margin-bottom: 40px;
+}
+
 textarea, input {
   font-size: 1rem;
 }
